--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
 
 <body>
 
-
   <!-- Main Content Start -->
-  <div class="main-content ">
+  <div class="main-content">
 
     <!-- Hero Scection Start -->
     <div class="section-padding-2 scroll-effect" style="background-image: url(./assets/images/background-3.svg);background-size: cover;
@@ -66,87 +65,14 @@
           </div>
 
         </div>
+        
         <!-- CTA -->
-        <div class="text-md-center text-start" style="margin-bottom: 0px;">
+        <div class="text-md-center text-start section-padding-3">
           <a href="#" class="btn-2 btn-2-dark btn-2-lg fs-6 me-2">Want a Peek into My Life?</a>
           <a href="https://cal.com/akash-palandagama/30min" class="btn-2 btn-2-light btn-2-lg fs-6"></i>Set Up a
             Call</a>
         </div>
 
-        <!-- Techstack -->
-        <div class="scroll-effect section-padding-2">
-          <div class="swiper mySwiper ">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <div class="tech-item">
-                  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/figma/figma-original.svg" />
-                  <span class="tech-name">Figma</span>
-                </div>
-              </div>
-
-              <div class="swiper-slide">
-                <div class="tech-item">
-                  <img
-                    src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original-wordmark.svg" />
-                  <span class="tech-name">HTML</span>
-                </div>
-              </div>
-
-              <div class="swiper-slide">
-                <div class="tech-item">
-                  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" />
-                  <span class="tech-name">CSS</span>
-                </div>
-              </div>
-
-              <div class="swiper-slide">
-                <div class="tech-item">
-                  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/behance/behance-original.svg" />
-                  <span class="tech-name">Behance</span>
-                </div>
-              </div>
-
-              <div class="swiper-slide">
-                <div class="tech-item">
-                  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vscode/vscode-original.svg" />
-                  <span class="tech-name">Vs Code</span>
-                </div>
-              </div>
-
-              <div class="swiper-slide">
-                <div class="tech-item">
-                  <img src="https://img.icons8.com/?size=100&id=kTuxVYRKeKEY&format=png&color=000000">
-                  <span class="tech-name">ChatGPT</span>
-                </div>
-              </div>
-
-              <div class="swiper-slide">
-                <div class="tech-item">
-                  <img src="https://img.icons8.com/?size=100&id=YWOidjGxCpFW&format=png&color=000000" alt="deepseek">
-                  <span class="tech-name">Deepseek</span>
-                </div>
-              </div>
-
-              <div class="swiper-slide">
-                <div class="tech-item">
-                  <img src="assets/images/logos/colors.co-logo" alt="colors.co">
-                  <span class="tech-name">Colors.co</span>
-                </div>
-              </div>
-
-              <div class="swiper-slide">
-                <div class="tech-item">
-                  <div
-                    class="logo-favicon rounded-lg text-lg flex items-center justify-center font-semibold fs-3x fw-bold">
-                    UI </div>
-                  <span class="tech-name">UI Colors</span>
-
-                </div>
-              </div>
-
-            </div>
-          </div>
-        </div>
       </div>
 
 
@@ -155,7 +81,7 @@
     <div class="container">
 
       <!-- Latest Projects Scection Start -->
-      <div class="section-padding-3 scroll-effect" id="work">
+      <div class="section-padding-3 scroll-effect">
 
         <h1 class="fs-3x fw-bold mb-md-20 mb-10">🪄 Explore Work</h1>
         <div class="row">
@@ -172,38 +98,6 @@
             <div class="fw-normal fs-4">A smart, all-in-one platform designed to streamline administration, enhance
               student success, and drive institutional growth.</div>
           </div>
-
-          <!-- <div class="col-md-6 col-12 mb-10">
-            <div class="card card-flush border rounded-3 h-275px d-flex align-items-center justify-content-center mb-5"
-              style="background-color: #FFF7F6; border-color: #d7363e !important; overflow: hidden;">
-              <img src="./assets/images/projects-banners/soonerspublicschool.png"
-                class="h-350px mt-20 ms-20 hover-scale" alt="">
-            </div>
-            <div class="mb-5">
-              <span class="badge-3 badge-3-yellow me-2">SaaS</span>
-              <span class="badge-3 badge-3-blue">Web Application</span>
-            </div>
-            <div class="fw-bold fs-3 mb-1">
-              Sooners Public School</div>
-            <div class="fw-normal fs-4">
-              School is located in Pakistan, I designed all the systems for students, parents,
-              teachers, and the super admin portals.</div>
-          </div> -->
-
-          <!-- <div class="col-md-6 col-12 mb-10">
-            <div class="card card-flush border rounded-3 h-275px d-flex align-items-center justify-content-center mb-5"
-              style="background-color: #F9FFF4; border-color: #88BA5D !important; overflow: hidden;">
-              <img src="./assets/images/projects-banners/imaginetechsol.png" class="h-400px mt-20 ms-20 hover-scale"
-                alt="">
-            </div>
-            <div class="mb-5">
-              <span class="badge-3 badge-3-blue">Website</span>
-            </div>
-            <div class="fw-bold fs-3 mb-1">Imagine Tech Solutions</div>
-            <div class="fw-normal fs-4">Specializing in custom software, cloud solutions, and UI/UX design to drive
-              business growth and digital transformation.</div>
-          </div> -->
-
 
           <div class="col-md-6 col-12 mb-10">
             <div class="card card-flush border rounded-3 h-275px d-flex align-items-center justify-content-center mb-5"
@@ -287,7 +181,7 @@
       </div>
 
       <!-- Experience -->
-      <div class="section-padding scroll-effect" id="experience">
+      <div class="section-padding scroll-effect">
         <h1 class="fs-3x fw-bold mb-md-20 mb-10">👨🏻‍💻 Experiences</h1>
         <div class="row">
           <div class="col-12 mb-10 mb-md-15">
@@ -433,235 +327,13 @@
 
       </div>
 
-      <!-- Feedbacks -->
-      <section class="feedback-section section-padding-2 scroll-effect">
-        <h1 class="fs-3x fw-bold mb-md-20 mb-10">💁🏻‍♂️ Words from Others</h1>
-
-        <div class="swipe-container row-1">
-          <!-- Original Cards -->
-
-          <div class="feedback-card">
-            <div class="user-info">
-              <div class="user-avatar">
-                <div class="symbol symbol-45x symbol-circle">
-                  <img src="assets/images/feedbacks/ramesh-chathuranga.png" class="symbol-label" alt="">
-                </div>
-              </div>
-              <div>
-                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Archnix Pvt Ltd</p>
-                <p>Team Lead - Mobile Application</p>
-              </div>
-            </div>
-            <p class="mb-0">Akash is good team player and skillful designer and front end developer. Highly
-              recommended his work .</p>
-          </div>
-
-          <div class="feedback-card">
-            <div class="user-info">
-              <div class="user-avatar">
-                <div class="symbol symbol-45x symbol-circle">
-                  <img src="assets/images/feedbacks/tishan-wijekoon.jpg" class="symbol-label" alt="">
-                </div>
-              </div>
-              <div>
-                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Solar Gems Pvt Ltd</p>
-                <p>Managing Director</p>
-              </div>
-            </div>
-            <p class="mb-0">Improved the GEM and Jewelry ERP system, enhancing marketing strategies and
-              performance based on our requirements.
-            </p>
-          </div>
-
-          <div class="feedback-card">
-            <div class="user-info">
-              <div class="user-avatar">
-                <div class="symbol symbol-45x symbol-circle">
-                  <img src="assets/images/feedbacks/prabash-prasanna.png" class="symbol-label" alt="">
-                </div>
-              </div>
-              <div>
-                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Archnix Pvt Ltd</p>
-                <p>Team Lead - Lamp Stack</p>
-              </div>
-            </div>
-            <p class="mb-0">Akash is an exceptional UI/UX Developer with a strong eye for design and a user-focused
-              approach. Their ability to craft intuitive, visually appealing interfaces makes them a valuable asset to
-              any team.</p>
-          </div>
-
-          <!-- Duplicate Cards -->
-          <div class="feedback-card">
-            <div class="user-info">
-              <div class="user-avatar">
-                <div class="symbol symbol-45x symbol-circle">
-                  <img src="assets/images/feedbacks/ramesh-chathuranga.png" class="symbol-label" alt="">
-                </div>
-              </div>
-              <div>
-                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Archnix Pvt Ltd</p>
-                <p>Team Lead - Mobile Application</p>
-              </div>
-            </div>
-            <p class="mb-0">Akash is good team player and skillful designer and front end developer. Highly
-              recommended his work .</p>
-          </div>
-
-          <div class="feedback-card">
-            <div class="user-info">
-              <div class="user-avatar">
-                <div class="symbol symbol-45x symbol-circle">
-                  <img src="assets/images/feedbacks/tishan-wijekoon.jpg" class="symbol-label" alt="">
-                </div>
-              </div>
-              <div>
-                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Solar Gems Pvt Ltd</p>
-                <p>Managing Director</p>
-              </div>
-            </div>
-            <p class="mb-0">Improved the GEM and Jewelry ERP system, enhancing marketing strategies and
-              performance based on our requirements.
-          </div>
-
-          <div class="feedback-card">
-            <div class="user-info">
-              <div class="user-avatar">
-                <div class="symbol symbol-45x symbol-circle">
-                  <img src="assets/images/feedbacks/prabash-prasanna.png" class="symbol-label" alt="">
-                </div>
-              </div>
-              <div>
-                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Archnix Pvt Ltd</p>
-                <p>Team Lead - Lamp Stack</p>
-              </div>
-            </div>
-            <p class="mb-0">Akash is an exceptional UI/UX Developer with a strong eye for design and a user-focused
-              approach. Their ability to craft intuitive, visually appealing interfaces makes them a valuable asset to
-              any team.</p>
-          </div>
-
-        </div>
-
-        <!-- Second Row (Right to Left) -->
-        <div class="swipe-container row-2">
-          <!-- Original Cards -->
-
-          <div class="feedback-card">
-            <div class="user-info">
-              <div class="user-avatar">
-                <div class="symbol symbol-45x symbol-circle">
-                  <img src="assets/images/feedbacks/mohamed-basem.png" class=" symbol-label" alt="">
-                </div>
-              </div>
-              <div>
-                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Amarican University in the Emirates</p>
-                <p>Senior Develoepr & Business Owner</p>
-              </div>
-            </div>
-            <p class="mb-0">Akash's contributions are nothing short of amazing and impressive; his dedication to
-              excellence elevates every project.
-            </p>
-          </div>
-
-          <div class="feedback-card">
-            <div class="user-info">
-              <div class="user-avatar">
-                <div class="symbol symbol-45x symbol-circle">
-                  <img src="assets/images/feedbacks/sadaqat-ali.png" class=" symbol-label" alt="">
-                </div>
-              </div>
-              <div>
-                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Amarican University in the Emirates</p>
-                <p>Senior Full Stack Develoepr</p>
-              </div>
-            </div>
-            <p class="mb-0">Akash consistently delivers innovative and unique UI/UX designs. His front-end development
-              skills are exceptional, making him a top-tier designer. I highly recommend him for any project.
-            </p>
-          </div>
-
-          <div class="feedback-card">
-            <div class="user-info">
-              <div class="user-avatar">
-                <div class="symbol symbol-45x symbol-circle">
-                  <img src="assets/images/feedbacks/future-green-asia.png" class=" symbol-label" alt="">
-                </div>
-              </div>
-              <div>
-                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Future Green Asia</p>
-                <p>Co-Founder</p>
-              </div>
-            </div>
-            <p class="mb-0">Akash helped me transition my business into the digital world. He designed my logo, website,
-              business cards,
-              invoices, and all other product designs. I appreciate his work.
-            </p>
-          </div>
-
-          <!-- Duplicate Cards -->
-          <div class="feedback-card">
-            <div class="user-info">
-              <div class="user-avatar">
-                <div class="symbol symbol-45x symbol-circle">
-                  <img src="assets/images/feedbacks/mohamed-basem.png" class=" symbol-label" alt="">
-                </div>
-              </div>
-              <div>
-                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Amarican University in the Emirates</p>
-                <p>Senior Develoepr & Business Owner</p>
-              </div>
-            </div>
-            <p class="mb-0">Akash's contributions are nothing short of amazing and impressive; his dedication to
-              excellence elevates every project.
-            </p>
-          </div>
-
-          <div class="feedback-card">
-            <div class="user-info">
-              <div class="user-avatar">
-                <div class="symbol symbol-45x symbol-circle">
-                  <img src="assets/images/feedbacks/sadaqat-ali.png" class=" symbol-label" alt="">
-                </div>
-              </div>
-              <div>
-                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Amarican University in the Emirates</p>
-                <p>Senior Full Stack Develoepr</p>
-              </div>
-            </div>
-            <p class="mb-0">Akash consistently delivers innovative and unique UI/UX designs. His front-end development
-              skills are exceptional, making him a top-tier designer. I highly recommend him for any project.
-            </p>
-          </div>
-
-          <div class="feedback-card">
-            <div class="user-info">
-              <div class="user-avatar">
-                <div class="symbol symbol-45x symbol-circle">
-                  <img src="assets/images/feedbacks/future-green-asia.png" class=" symbol-label" alt="">
-                </div>
-              </div>
-              <div>
-                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Future Green Asia</p>
-                <p>Co-Founder</p>
-              </div>
-            </div>
-            <p class="mb-0">Akash helped me transition my business into the digital world. He designed my logo, website,
-              business cards,
-              invoices, and all other product designs. I appreciate his work.
-            </p>
-          </div>
-
-        </div>
-
-      </section>
-
     </div>
 
     <!-- Footer -->
-    <footer class="" id="contact">
+    <footer class="">
       <div class="footer-main">
         <div class="footer-content">
-          <h1 class="text-white fs-1">Transform Your Product with Data-Driven UX Design.</h1>
+          <h1 class="text-white fs-1">Let's work together!</h1>
           <p>From understanding user needs to designing seamless interfaces, I specialize in creating
             exceptional
             UX. Let's leverage my skills and local insight to make your product stand out 😊</p>
@@ -683,61 +355,37 @@
       </div>
     </footer>
 
+    <!-- Navigation -->
+    <nav class="bottom-nav">
+      <a href="#" class="nav-item active" data-page="home">
+        <i class="fas fa-smile"></i>
+        <span>Home</span>
+      </a>
+      <a href="about-me.html" class="nav-item" data-page="about-me">
+        <i class="fa-solid fa-user"></i>
+        <span>About Me</span>
+      </a>
+      <a href="Projects" class="nav-item" data-page="projects">
+       <i class="fa-solid fa-wand-magic-sparkles"></i>
+        <span>Projects</span>
+      </a>
+      <a href="contact.html" class="nav-item" data-page="contact">
+        <i class="fas fa-envelope"></i>
+        <span>Contact</span>
+      </a>
+    </nav>
+
+
+
   </div>
 
-  <nav class="bottom-nav">
-    <a href="#about" class="nav-item active" data-target="about">
-      <i class="fas fa-smile"></i>
-      <span>About</span>
-    </a>
-    <a href="#work" class="nav-item" data-target="work">
-      <i class="fa-solid fa-wand-magic-sparkles"></i>
-      <span>Work</span>
-    </a>
-    <a href="#experence" class="nav-item" data-target="experience">
-      <i class="fas fa-briefcase"></i>
-      <span>Experiences</span>
-    </a>
-    <a href="#contact" class="nav-item" data-target="contact">
-      <i class="fas fa-envelope"></i>
-      <span>Contact</span>
-    </a>
-  </nav>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"
     referrerpolicy="no-referrer"></script>
   <script src="./assets/js/custom/custom.js"></script>
-  <!-- <script src="assets/js/scripts.bundle.js"></script>
-  <script src="assets/js/widgets.bundle.js"></script> -->
+  <!-- <script src="assets/js/scripts.bundle.js"></script> -->
+  <script src="assets/js/widgets.bundle.js"></script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
-
-  <script>
-    const swiper = new Swiper('.mySwiper', {
-      loop: true,
-      speed: 4000,
-      autoplay: {
-        delay: 0, // Instant automatic transition
-        disableOnInteraction: false,
-      },
-      slidesPerView: 'auto',
-      spaceBetween: 30,
-      centeredSlides: true,
-      freeMode: true,
-      breakpoints: {
-        320: {
-          spaceBetween: 20,
-          slidesPerView: 3,
-        },
-        768: {
-          slidesPerView: 4,
-        },
-        1024: {
-          slidesPerView: 6,
-        }
-      }
-    });
-  </script>
 
 </body>
 
