--- a/about-me.html
+++ b/about-me.html
@@ -34,20 +34,87 @@
 
     <!-- header card -->
     <div class="h-300px d-flex align-items-center justify-content-center bg-light mb-10">
-      <h1 class="fs-3hx text-center fw-semibold px-10" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif">
+      <h1 class="fs-3hx text-center fw-semibold px-10"
+        style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif">
         I design products that make people think, <br>
-        <span class="fw-bold" style="font-family: 'Dancing Script', cursive; color: #23515A;">‘oh, that makes sense’</span>
+        <span class="fw-bold" style="font-family: 'Dancing Script', cursive; color: #23515A;">‘oh, that makes
+          sense’</span>
       </h1>
     </div>
 
-    <!-- Me area -->
-     <div class="text-center">
-      <img src="./assets/images/my-photos/grad-img.png" class="w-md-500px w-400px rounded-3"  alt="">
-     </div>
+    <div class="container mb-20" style="padding-top: 0px !important;">
 
-    <div class="container">
+      <!-- Image area -->
+      <div class="d-flex justify-content-center align-items-center">
+        <img src="./assets/images/my-photos/grad-img.png"
+          class="h-md-500px h-400px rounded-5 border border-gray-200 border-3" alt="">
+      </div>
+
+      <!-- Text-area -->
+      <div class="p-10">
+
+        <h1 class="fw-bold text-gray-800 fs-2hx mb-10">My story</h1>
+
+        <p class="fs-4 text-gray-700 fw-normal mb-2">From sketching superheroes on the back of my schoolbooks to
+          crafting digital experiences that (hopefully) don’t crash my journey has always been fueled by creativity,
+          curiosity, and a bit of caffeine. 
+        </p>
+
+         <p class="fs-4 text-gray-700 fw-normal mb-8">
+          I once took an outdated ERP system, gave it a full UI/UX makeover, and turned it into a sleek, modern mobile
+          app. Think of it as turning a potato into french fries same core, way more appealing.
+        </p>
+
+        <div class="mb-8">
+          <h2>What do I do?</h2>
+          <p class="fs-4 text-gray-700 fw-normal">I specialize in UI/UX Design in the world of Interactive Media,
+            blending beautiful visuals with smooth functionality. Think of me as the middle ground between a pixel
+            perfectionist and a logic-loving developer.
+          </p>
+        </div>
+
+        <div class="mb-8">
+          <h2>How did I get here?</h2>
+          <p class="fs-4 text-gray-700 fw-normal">Started with Microsoft Paint, ended up designing mobile apps,
+            websites, ERP systems, and SaaS products. Somewhere in between, I also dabbled in digital marketing, which
+            taught me how to make things not just look good — but sell too.
+          </p>
+        </div>
+
+        <div class="mb-8">
+          <h2>Outside the screen?</h2>
+          <p class="fs-4 text-gray-700 fw-normal">I’m a team player, a tech geek, and once a competitive gamer during
+            COVID (don’t worry, I’ve retired undefeated in snack consumption).
+          </p>
+        </div>
+
+      </div>
 
     </div>
+
+    <!-- Footer -->
+    <footer class="">
+      <div class="footer-main">
+        <div class="footer-content">
+          <h1 class="text-white fs-1">Let's work together!</h1>
+          <p>Ready to bring your vision to life? Let’s create something amazing together.</p>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <div class="footer-bottom-content">
+          <div class="copyright">
+            ©2025 Designed & Developed by Akash Palandagama
+          </div>
+          <div class="social-links">
+            <a href="https://www.linkedin.com/in/akashpalandagama/" target="_blank">LinkedIn</a>
+            <a href="https://dribbble.com/AkashPalandagama" target="_blank">Dribbble</a>
+            <a href="https://www.behance.net/akashpalanda" target="_blank">Behance</a>
+          </div>
+
+        </div>
+      </div>
+    </footer>
 
     <!-- Navigation -->
     <nav class="bottom-nav">
@@ -59,9 +126,9 @@
         <i class="fa-solid fa-user"></i>
         <span>About Me</span>
       </a>
-      <a href="Projects" class="nav-item" data-page="projects">
+      <a href="all-projects.html" class="nav-item" data-page="projects">
         <i class="fa-solid fa-wand-magic-sparkles"></i>
-        <span>Projects</span>
+        <span>My Work</span>
       </a>
       <a href="contact.html" class="nav-item" data-page="contact">
         <i class="fas fa-envelope"></i>
