--- a/all-projects.html
+++ b/all-projects.html
@@ -225,9 +225,9 @@
             </div>
           </div>
 
-          <div class="text-center">
+          <!-- <div class="text-center">
             <a href="index.html" class="btn-2 btn-2-dark btn-2-lg fs-6 me-2">Back to Main Page</a>
-          </div>
+          </div> -->
 
         </div>
       </div>
@@ -258,6 +258,27 @@
         </div>
       </div>
     </footer>
+
+     <!-- Navigation -->
+    <nav class="bottom-nav">
+      <a href="./index.html" class="nav-item" data-page="home">
+        <i class="fas fa-smile"></i>
+        <span>Home</span>
+      </a>
+      <a href="about-me.html" class="nav-item" data-page="about-me">
+        <i class="fa-solid fa-user"></i>
+        <span>About Me</span>
+      </a>
+      <a href="all-projects.html" class="nav-item active" data-page="projects">
+        <i class="fa-solid fa-wand-magic-sparkles"></i>
+        <span>My Work</span>
+      </a>
+      <a href="contact.html" class="nav-item" data-page="contact">
+        <i class="fas fa-envelope"></i>
+        <span>Contact</span>
+      </a>
+    </nav>
+
     
   </div>
 
