--- a/all-projects.html
+++ b/all-projects.html
@@ -230,17 +230,108 @@
           </div> -->
 
         </div>
+
+      </div>
+
+
+      <div class="mb-20">
+        <h1 class="fs-2x fw-bold mb-10 mb-md-20">Early 2020 UI Designs & Case Studies</h1>
+        <div class="row">
+          <div class="col-md-6 col-12 mb-10">
+            <div
+              class="card card-flush border rounded-3 h-275px d-flex align-items-center justify-content-center mb-5 border-gray-400"
+              style="overflow: hidden;">
+              <img src="./assets/images/portfolio/AR Based Study Guide.png" class="w-100 hover-scale" alt="">
+            </div>
+            <div class="mb-5">
+              <span class="badge-3 badge-3-yellow me-2">AR / VR</span>
+              <span class="badge-3 badge-3-blue">Mobile Application</span>
+            </div>
+            <div class="fw-bold fs-3 mb-1">AR Based Study Guide (Research Project)</div>
+            <div class="fw-normal fs-4">AR study guide is an application developed specially for Interactive Media
+              undergraduates to practice study materials</div>
+          </div>
+          <div class="col-md-6 col-12 mb-10">
+            <div
+              class="card card-flush border rounded-3 h-275px d-flex align-items-center justify-content-center mb-5 border-gray-400"
+              style="overflow: hidden;">
+              <img src="./assets/images/portfolio/The Book Mark.png" class="w-100 hover-scale" alt="">
+            </div>
+            <div class="mb-5">
+              <span class="badge-3 badge-3-blue">Mobile Application</span>
+            </div>
+            <div class="fw-bold fs-3 mb-1">e-Library Application (University Project)</div>
+            <div class="fw-normal fs-4">An online and offline e-library mobile application that helps students and all
+              types of readers.
+
+            </div>
+          </div>
+          <div class="col-md-6 col-12 mb-10">
+            <div
+              class="card card-flush border rounded-3 h-275px d-flex align-items-center justify-content-center mb-5 border-gray-400"
+              style="overflow: hidden;">
+              <img src="./assets/images/portfolio/Home Budget.png" class="w-100 hover-scale" alt="">
+            </div>
+            <div class="mb-5">
+              <span class="badge-3 badge-3-blue">Mobile Application</span>
+            </div>
+            <div class="fw-bold fs-3 mb-1">Home Budget Application</div>
+            <div class="fw-normal fs-4">A mobile application designed to help individuals and families track expenses,
+              manage income, and stay on top of their home budget with ease.
+            </div>
+          </div>
+          <div class="col-md-6 col-12 mb-10">
+            <div
+              class="card card-flush border rounded-3 h-275px d-flex align-items-center justify-content-center mb-5 border-gray-400"
+              style="overflow: hidden;">
+              <img src="./assets/images/portfolio/eSales Enhzner.png" class="w-100 hover-scale" alt="">
+            </div>
+            <div class="mb-5">
+              <span class="badge-3 badge-3-blue">Mobile Application</span>
+            </div>
+            <div class="fw-bold fs-3 mb-1">Enhanzer eSales ERP Application</div>
+            <div class="fw-normal fs-4">An ERP app that simplifies sales management and boosts business efficiency.
+            </div>
+          </div>
+          <div class="col-md-6 col-12 mb-10">
+            <div
+              class="card card-flush border rounded-3 h-275px d-flex align-items-center justify-content-center mb-5 border-gray-400"
+              style="overflow: hidden;">
+              <img src="./assets/images/portfolio/mc-delivery.png" class="w-100 hover-scale" alt="">
+            </div>
+            <div class="mb-5">
+              <span class="badge-3 badge-3-purple me-1">Re-Design</span>
+              <span class="badge-3 badge-3-blue">Mobile Application</span>
+            </div>
+            <div class="fw-bold fs-3 mb-1">McDonald's Mobile Application Redesign</div>
+            <div class="fw-normal fs-4">A redesigned mobile app focused on enhancing user experience, simplifying food
+              ordering, and improving customer engagement.
+            </div>
+          </div>
+          <div class="col-md-6 col-12 mb-10">
+            <div
+              class="card card-flush border rounded-3 h-275px d-flex align-items-center justify-content-center mb-5 border-gray-400"
+              style="overflow: hidden;">
+              <img src="./assets/images/portfolio/hotel-booking-website.png" class="w-100 hover-scale" alt="">
+            </div>
+            <div class="mb-5">
+              <span class="badge-3 badge-3-purple me-1">Re-Design</span>
+              <span class="badge-3 badge-3-blue">Website</span>
+            </div>
+            <div class="fw-bold fs-3 mb-1">Hotel & Restaurant Website Redesign</div>
+            <div class="fw-normal fs-4">A modern website redesign aimed at improving user experience, showcasing
+              services, and boosting direct bookings for the hotel and restaurant.
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-
     <!-- Footer -->
     <footer class="">
       <div class="footer-main">
         <div class="footer-content">
           <h1 class="text-white fs-1">Let's work together!</h1>
-          <p>From understanding user needs to designing seamless interfaces, I specialize in creating
-            exceptional
-            UX. Let's leverage my skills and local insight to make your product stand out 😊</p>
+          <p>Ready to bring your vision to life? Let’s create something amazing together.</p>
         </div>
       </div>
 
@@ -259,7 +350,7 @@
       </div>
     </footer>
 
-     <!-- Navigation -->
+    <!-- Navigation -->
     <nav class="bottom-nav">
       <a href="./index.html" class="nav-item" data-page="home">
         <i class="fas fa-smile"></i>
@@ -279,7 +370,7 @@
       </a>
     </nav>
 
-    
+
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"
