--- a/about-me.html
+++ b/about-me.html
@@ -46,7 +46,7 @@
 
       <!-- Image area -->
       <div class="d-flex justify-content-center align-items-center">
-        <img src="./assets/images/my-photos/grad-img.png"
+        <img src="./assets/images/my-photos/my.jpg"
           class="h-md-500px h-400px rounded-5 border border-gray-200 border-3" alt="">
       </div>
 
